--- a/assests/style/index.css
+++ b/assests/style/index.css
@@ -64,6 +64,10 @@ button {
     background-color:var(--app-green);
 }
 
+button:hover {
+    background-color:#00b16a;
+}
+
 i {
     color: #fff;
     font-size: 23px;
@@ -76,4 +80,8 @@ i {
 
 #alarm-input + #button {
     margin-left: 15px;
+}
+
+span {
+    color: #fff;
 }
